add 15, 18, 54