@@ -1,53 +1,40 @@
 class Solution {
     public List<List<Integer>> fourSum(int[] nums, int target) {
         Arrays.sort(nums);
-        return kSum(nums, target, 0, 4);
+        return kSum(nums, 0, nums.length - 1, target, 4);
     }
-    
-    public List<List<Integer>> kSum(int[] nums, int target, int start, int k) {
-        List<List<Integer>> r = new ArrayList<>();
-        
-        if (start == nums.length) {
-            return r;
-        }
-        
+
+    private List<List<Integer>> kSum(int[] nums, int start, int end, int target, int k) {
+        List<List<Integer>> res = new ArrayList();
+        if (start == end) return res;
         int avg = target / k;
-        
-        if (nums[start] > avg || avg > nums[nums.length - 1]) {
-            return r;
-        }
-        
-        if (k == 2) {
-            return twoSum(nums, target, start);
-        }
-        
-        for (int i = start; i < nums.length; i++) {
-            if (i == start || nums[i] != nums[i - 1]) {
-                for (List<Integer> subset: kSum(nums, target - nums[i], i + 1, k - 1)) {
-                    r.add(new ArrayList<>(List.of(nums[i])));
-                    r.get(r.size() - 1).addAll(subset);
-                }
+        if (nums[start] > avg || nums[end] < avg) return res;
+        if (k == 2) return twoSum(nums, start, end, target);
+        for (int i = start; i < end; i++) {
+            // check duplicated
+            if (i != start && nums[i] == nums[i - 1]) continue;
+            for (List<Integer> subset: kSum(nums, i + 1, end, target - nums[i], k - 1)) {
+                List<Integer> row = new ArrayList();
+                row.add(nums[i]);
+                row.addAll(subset);
+                res.add(row);
             }
         }
-        
-        return r;
+        return res;
     }
-    
-    public List<List<Integer>> twoSum(int[] nums, int target, int start) {
-        List<List<Integer>> r = new ArrayList<>();
-        int low = start;
-        int high = nums.length - 1;
-        while (low < high) {
-            int sum = nums[low] + nums[high];
-            if (sum > target || (high < nums.length - 1 && nums[high] == nums[high + 1])) {
-                high--;
-            } else if (sum < target || (low > start && nums[low] == nums[low - 1])) {
-                low++;
-            } else {
-                r.add(new ArrayList<>(List.of(nums[low++], nums[high--])));
+
+    private List<List<Integer>> twoSum(int[] nums, int start, int end, int target) {
+        List<List<Integer>> res = new ArrayList();
+        while (start < end) {
+            if (nums[start] + nums[end] == target) {
+                res.add(Arrays.asList(nums[start], nums[end]));
+                while (start < end && nums[start] == nums[start + 1]) start++;
+                while (start < end && nums[end] == nums[end - 1]) end--;
+                start++; end--;
             }
+            else if (nums[start] + nums[end] < target) start++;
+            else end--;
         }
-        return r;
+        return res;
     }
-    
 }
